# NDMI110-graphs-and-networks-practicals

./: .gitignore  README.md  panache.toml  pyproject.toml  requirements.txt
.githooks/: pre-commit
00/: demo_notebook.ipynb  demo_notebook.qmd
01/: 01_en.ipynb  01_en.qmd  prague_dataset.py
02/: 02_en.ipynb  02_en.qmd  02_en_tasks.tex  references.bib
03/: 03_en.ipynb  03_en.qmd  03_en_sol.ipynb  03_en_sol.qmd
05/: 05_en.ipynb  05_en.qmd
07/: 07_en.ipynb  07_en.qmd
10/: 10_en.ipynb  10_en.qmd
